# auto-captcha

./: CHANGELOG.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: quickstart.md
src/auto_captcha/: solver.py
src/auto_captcha.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/auto_captcha_solver/: cli.py
src/auto_captcha_solver.egg-info/: PKG-INFO  entry_points.txt  top_level.txt
