[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-captcha-solver"
version = "0.1.3"
description = "Universal captcha solver for Playwright automation — hCaptcha + reCAPTCHA v2 via NopeCHA API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Suhaas Chitturi"},
]
keywords = ["captcha", "hcaptcha", "recaptcha", "playwright", "automation", "browser", "solver"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
playwright = ["playwright>=1.30.0"]
all = ["playwright>=1.30.0"]

[project.scripts]
auto-captcha-solver = "auto_captcha_solver.cli:main"

[project.urls]
Homepage = "https://github.com/interfluve-wav/auto-captcha-solver"
Repository = "https://github.com/interfluve-wav/auto-captcha-solver"
Issues = "https://github.com/interfluve-wav/auto-captcha-solver/issues"

[tool.setuptools.packages.find]
where = ["src"]
